<resources>
    <string name="app_name">CamEvent</string>
    <string name="title_activity_maps">CamEvent</string>
    <string name="title_activity_eventactivity">Eventactivity</string>
    <string name="location_permission_denied">location_permission_denied</string>
    <string name="permission_required_toast">permission_required_toast</string>
    <string name="permission_rationale_location">permission_rationale_location</string>
    <string name="start">Pick a date</string>
    <string name="keyWord">Key Word</string>
    <string name="search">Search</string>
    <string name="post">Post</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="capacity">Capacity</string>
    <string name="getData">GetData</string>
    <string name="inDialog">InDialog</string>
    <string name="title_activity_text_view_expandable_animation">TextViewExpandableAnimation</string>
    <string name="api_key">5f59ce30b239a9e2e1f2e3d5774c562b</string>
    <string-array name="spinnerType">
        <item>Fed</item>
        <item>Information session</item>
        <item>Conference</item>
        <item>Seminar</item>
        <item>Workshop</item>
    </string-array>
    <string-array name="spinnerBuilding">
        <item>DC</item>
        <item>DP</item>
        <item>SLC</item>
        <item>E5</item>
        <item>E3</item>
        <item>RCH</item>
        <item>PAC</item>
    </string-array>
    <string name="title_activity_me">MeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_init">InitActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_event_dbtest">EventDBTest</string>
    <string name="sign_up">Sign Up</string>
    <string name="hint_password">password</string>
    <string name="hint_email">email</string>
    <string name="sign_in">Sign In</string>
    <string name="textViewBuilding">Building</string>
    <string name="textViewType">Type</string>
    <string name="textViewStart">Start</string>
    <string name="textViewEnd">End</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Log in</string>
    <string name="register">Register</string>
    <string name="title_activity_display_waterloo">DisplayWaterlooActivity</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to send you password reset instructions.</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back">Back</string>

</resources>


