<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/window_bgcolor">

    <LinearLayout
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="90dp">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:src="@drawable/location"
            android:tint="@color/appBlue"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:id="@+id/spinnerBuilding"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:popupBackground="@color/window_bgcolor"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:src="@drawable/time"
            android:tint="@color/appBlue"/>
        <EditText
            android:id="@+id/etxt_fromdate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/start" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:src="@drawable/word"
            android:tint="@color/appBlue"/>

        <EditText
            android:id="@+id/keyWord"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/keyWord"
            android:singleLine="true" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp">

        <Button
            android:id="@+id/search_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/textsize_normal"
            android:onClick="search"
            android:text="@string/search"
            android:background="@drawable/rounded_edittext"
            android:textColor="@color/colorAccent"
            />
    </LinearLayout>

</LinearLayout>

